mac: Prevent changes to omnibox text spacing during truncation.

When Chrome is built against a 10.11+ SDK, and run on 10.11+, the
allowsDefaultTighteningForTruncation property of NSParagraphStyle defaults to
YES for strings passed to the omnibox. When resizing a Chrome window, this
causes a jarring, but slight, change to the kerning of the omnibox text.

Bug: 754654
Change-Id: I119a3ba7dad950ee09c75e7f863c387dfd8802e2
Reviewed-on: https://chromium-review.googlesource.com/616166
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494593}
Former-commit-id: caa85826fea208a0194983913284d0107146c363